fixed bg images overflowing when hovered in serviceItem component

--- a/app/index.css
+++ b/app/index.css
@@ -92,7 +92,7 @@ footer[data-hasbefore="true"]::before {@apply content-[''] absolute top-0 left-0
 @media (min-width: 1024px) {
     .home-first-section-slider {display: block !important;}
     .home-first-section-slider-mq {display: none !important;}
-    .group:hover .group-hover-skew {transform: scale(.72) perspective(500px) rotateY(-20deg);}
+    .group:hover .group-hover-skew {transform: scale(.72) perspective(530px) rotateY(-20deg);}
     .group:hover .group-hover-skew-small-scale {transform: scale(0.9) perspective(300px) rotateY(-10deg);}
     .group .group-hover-inner-img {transform: perspective(300px) rotateY(45deg);}
     .group:hover .group-hover-inner-img {transform: perspective(300px) rotateY(10deg);}
